headphones/headphones-dep.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: headphones
  name: headphones
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headphones
  template:
    metadata:
      labels:
        app: headphones
    spec:
      containers:
      - image: linuxserver/headphones:107
        name: headphones
        ports:
          - containerPort: 8181
        volumeMounts:
          - mountPath: /config
            name: data
            subPath: config
          - mountPath: /downloads
            name: data
            subPath: downloads
          - mountPath: / music
            name: data
            subPath: music
          - mountPath: /dls
            name: sabnzbddls
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: headphonesclaim
        - name: sabnzbddls
          persistentVolumeClaim:
            claimName: sabclaim
